# szcore-evaluation

./: pyproject.toml
.github/workflows/: python-app.yml
src/szcore_evaluation/: __init__.py  __main__.py  evaluate.py
tests/: test_evaluate_dataset.py  test_result.py
