[project]
name = "szcore-evaluation"
version = "0.0.7"
description = "Compare szCORE compliant annotations of EEG datasets of people with epilelpsy."
authors = [
    { name = "Jonathan Dan", email = "jonathan.dan@epfl.ch" }
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "epilepsy2bids>=0.0.7",
    "numpy>=1.26.4",
    "timescoring>=0.0.5",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/szcore_evaluation"]
